amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/broken-interface-fields.api.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/broken-interface-fields.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#required-fields
  Message: field address is required in Person
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/broken-interface-fields.api.graphql#/declares/shape/Person
  Property: http://www.w3.org/ns/shacl#property
  Range: [(9,0)-(11,1)]
  Location: 
